--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "quick.db": "^7.1.3"
-  }
+  }, "engines": {
+ "node": "16.9.0",
+ "npm": "7.29.0"
+}
 }
