--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "dotenv": "^10.0.0",
     "quick.db": "^7.1.3"
   }, "engines": {
- "node": "16.9.0",
- "npm": "7.28.0"
+ "node": "16.9.0"
 }
 }
